# lib-dnml

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  dynamol.h  libdnml_base.h
adynamol/big_numbers/: bigInt.c  bigInt_func.h  bigInt_io.c  bigNums.h
big_numbers/: bigInt.c  bigInt_func.h
calc_algo/: calculation.h
calc_algo/header/: add_sub.h  div.h  mod.h  mod_op.h  mul.h  num_theory.h  pow_root.h
calc_algo/src/: div.c  mod.c  mod_op.c  mul.c  num_theory.c  pow_root.c
calculation_algorithms/: calculation.h
calculation_algorithms/atypes/: _ctx.h  mont_ctx.h
calculation_algorithms/header/: add_sub.h  div.h  mod.h  mod_op.h  mul.h  num_theory.h  pow_root.h
calculation_algorithms/src/: add_sub.c  div.c  mod.c  mod_op.c  mul.c  num_theory.c
include/: char_table.c  char_tables.h  include.h
include/system/: __compiler.h  __hwcaps.c  __hwcaps.h  sys.h
include/system/asm/: __sys_conn.h  _dnml_cpuid.S
internal_utils/: aconv_macros.h  adeserialize_helper.h  bigNum_utils.c  util.h
intrinsics/: intrinsics.h  intrinutil.h
intrinsics/arm64/: _arm64_addsub.S  _arm64_alg.S  _arm64_arith.S  _arm64_bitops.S  _arm64_conn.h  _arm64_marith.S  aarch64_macros.h
intrinsics/risc-v64/: _rv64_arith.S  _rv64_bitops.S  _rv64_conn.h  _rv64_marith.S  _rvi64_arith.S  _rvi64_conn.h
intrinsics/vanillc/: _cintrin.c
intrinsics/x86_64/: _x86_conn.h  _x86_sysv_alg.S  _x86_sysv_arith.S  _x86_sysv_bitops.S  _x86_sysv_marith.S  _x86_win64_arith.S  _x86_win64_bitops.S  _x86_win64_marith.S
intrinsics/zvanillc/: _vanillc_alg.h  _vanillc_arith.h  _vanillc_bitops.h  _vanillc_conn.h  _vanillc_marith.h  _vanillc_modop.h  _vanillc_utils.h
sconfigs/: __threads_t.h  _ctx.h  arena.h  dnml_status.h  numeric_config.h  settings.h
sconfigs/memory/: _ctx.h  _scratch.h  arena.h
sconfigs/perf/: __threads_t.h
sconfigs/settings/: numeric_config.h
scripts/: dev_setup.sh
system/: __abi.h  __arch.h  __compiler.h  __hwcaps.c  __hwcaps.h  __include.h  __os.h  __platform.h  abi.h  arch.h  compiler.h
system/asm/: __asm_macros.h  __sys_conn.h
terminal_ui/: lowui.h
test/io/: _ioconv.h  iobuf.h
test/io/bigint/: bi_eval_fn.h  bi_exec_func.h  bi_indef.h  bi_setup.h  bi_util_func.h  binary_io.c  init_n_util_runner.c  init_runner.c  stobi_init_runner.c
test/io/case_gen/: bf_casegen.c  bi_casegen.h  case_gen.h  casegen_base.h  str_casegen.c  str_casegen.h
test/low/: arm64_runner.c  low_setup.h  rv64_runner.c  x86_runner.c
test/low/arm64/: arm64_runner.c
test/low/risc-v/: rv64_runner.c
test/low/x86_64/: x64e_runner.c  x64s_runner.c  x86_runner.c
test_ui/: _bigint_ui.h  _strui.h  _strui_casual.h  _test_base.h  lowui.h  str_ctx.h  strui.h  tmp.txt
util/: aconv_macros.h  bigNum_utils.c  misc_utils.c  sec_util.c  str_parse.c  util.h
zbuild/: Makefile  bigInt
ztest/: atest_include.h  atest_ui.h  blueprint.c  main.c  zmodinv_test.c
ztest/low/arm64/: arm64_runner.c
